<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">无线控制客户端</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint">模式</string>
    <string name="keyboard_mode">模拟器</string>       
    <string name="touch_mode">触摸</string>
    <string name="sensor_mode">体感</string>       
    <string name="sensortotouch_mode">空鼠</string>
    <string name="bind">设置</string>       
    <string name="ok">旋转</string>
    <string name="cancel">取消</string>
    <string name="up">加速</string>
    <string name="down">下</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="start_position">手指按下位置：</string> 
    <string name="move_distance">手指移动距离：</string>
    <string name="end_position">手指离开位置：</string> 
    <string name="title_setting_ip">请设置服务器IP:</string>
    <string name="bluetooth">蓝牙</string>
    <string name="wifi">wifi</string>
    
    <string name="error_ip">IP地址错误，请设置服务器IP!</string>   
    <string name="success_setting_ip">设置服务器IP地址成功，服务器IP:</string>   
    <string name="landscape">横屏</string>   
    <string name="portrait">竖屏</string>   
    
    <string name="quick">加速</string>
    <string name="back">退出</string>
    <string name="rotate">旋转</string>
</resources>