<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:background="#ffffff" >

    <com.external.cameraClient.customview.CircleScrollButton
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
   <RelativeLayout 
    	android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp">
            <TextView
                android:id="@+id/hint" 
                style="@style/button_style"
                android:text="@string/hint"
                android:layout_marginRight="20dp"/>
            <TextView
                android:id="@+id/bind"
                style="@style/button_style"
                android:text="@string/bind"/>
        </LinearLayout>

		<RelativeLayout 
	         android:layout_width="230dp"
	         android:layout_height="230dp"
	         android:layout_centerInParent="true">
        <TextView
	          android:id="@+id/ok"
	          style="@style/button_style"
	          android:layout_centerInParent="true"
	          android:text="@string/ok"/> 
	      <TextView
	          android:id="@+id/up"
	          style="@style/button_style"
	          android:layout_centerHorizontal="true"
	          android:layout_alignParentTop="true"
	          android:text="@string/up"/>  
	      <TextView
	          android:id="@+id/down" 
	          style="@style/button_style"
	          android:layout_centerHorizontal="true"
	          android:layout_alignParentBottom="true"
	          android:text="@string/down"/>   
	      <TextView
	          android:id="@+id/left" 
	          style="@style/button_style"
	          android:layout_centerVertical="true"
	          android:layout_alignParentLeft="true"
	          android:text="@string/left"/> 
	      <TextView
	          android:id="@+id/right" 
	          style="@style/button_style"
	          android:layout_centerVertical="true"
	          android:layout_alignParentRight="true"
	          android:text="@string/right"/>                                   
     </RelativeLayout>
     <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="5dp">
            <TextView
                android:id="@+id/orientation" 
                style="@style/button_style"
                android:text="@string/portrait"
                android:layout_marginRight="20dp"/>
            <TextView
                android:id="@+id/cancel"
                style="@style/button_style"
                android:text="@string/cancel"/>
        </LinearLayout>
     </RelativeLayout>
             
</LinearLayout>