<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center">   

    
    <Button
        android:id="@+id/touch_mode" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/touch_mode"
        android:background="@drawable/direct_btn_selector"
        /> 
    <Button
        android:id="@+id/sensor_mode" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_mode"
        android:background="@drawable/direct_btn_selector"
        />  
    <Button
        android:id="@+id/sensortotouch_mode" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensortotouch_mode"
        android:background="@drawable/direct_btn_selector"
        />  
        
</LinearLayout>